--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "@truffle/hdwallet-provider": "2.1.15",
+    "dotenv": "^16.4.7",
     "ganache": "7.9.2",
     "mocha": "10.8.2",
     "solc": "0.8.28",
