--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@truffle/hdwallet-provider": "2.1.15",
+    "@truffle/hdwallet-provider": "^2.1.15",
     "dotenv": "^16.4.7",
     "ganache": "7.9.2",
     "mocha": "10.8.2",
     "solc": "0.8.28",
-    "web3": "4.16.0"
+    "web3": "^4.16.0"
+  },
+  "devDependencies": {
+    "truffle": "^5.11.5"
   }
 }
